Maybe fix the overflow

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
   display: block;
   position: relative;
   width: 20vw;
+  overflow: hidden;
 }
 
 #search-text{
@@ -135,6 +136,8 @@ body {
   caret-color: white;
   background-color: rgba(0,0,0,0);
   color:white;
+
+  overflow: hidden;
 }
 
 #search-text::selection{
